# CumulusCI

./: .adr-dir  .coverage  .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .pyup.yml  .readthedocs.yml  .secrets.example  .vars.example  AGENTS.md  AUTHORS.rst  BDI_generator.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DataGenerator.py  Dockerfile  HISTORY.md  HISTORY.rst  LEGAL.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README-old.md  README.md  README.rst  SECURITY.md  TODO.txt  __init__.py  _config.yml  additional.yml  app.json  appveyor.yml  (+33 more)
.circleci/: config.yml
.dependabot/: config.yml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.git2gus/: config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build_docs.yml  build_homebrew.yml  chores.yml  docs.yml  feature_test.yml  install-matrix.yml  installer.yml  integration_test.yml  playwright_experiment.yml  pre-release.yml  publish-to-test-pypi.yml  pyinstaller.yml  release.yml  release_test.yml  release_test_sfdx.yml  slow_integration_tests.yml  update_dependencies.yml
ant/: ant-salesforce.xml  package_upload.py
cci_venv/requirements/: dev.txt  prod.txt
ci/: ant_wrapper.sh  codeship.sh  mpinstaller_update_dependencies.py  mrbelvedere_update_dependencies.py  package_upload.py  package_upload_ss.py  run_apex_tests.py  setup.py  upload_test_results.py
ci/cloud/: README.md
ci/github/: create_release.py  merge_master_to_feature.py  release_notes.py  set_commit_status.py  set_pending_status.py  tag_to_tag.py
ci/github_commands/: create_release.py  get_tags.py  set_tag.py
ci/orgmanagement/: bind_org.py
ci/push/: failed_orgs_for_push.py  get_version_id.py  orgs_for_push.py  push_api.py  push_request_status.py  schedule_push.py  update_push_request.py
cli/: README.md  cumulusci.py  full_help_text.sh  setup.py
cli/cumulusci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli/github/: release_notes.py
cli/metadata/: metadata_map.yml  package.py
cli/release_notes/: README.md  exceptions.py  generator.py  github_api.py  parser.py  provider.py  release_notes.py
cli/tests/: test_cli_ci.py
core/: config.py  cumulusci.py  exceptions.py  flows.py  keychain.py  tasks.py
core/tests/: test_config.py  test_flows.py  test_keychain.py
cumulusci/: __about__.py  __init__.py  __main__.py  conftest.py  cumulusci.yml  cumulusci.yml.bak  utils.py  version.txt
cumulusci.egg-info/: PKG-INFO
cumulusci/cli/: README.md  cci.py  check.py  checks.py  cli.py  config.py  error.py  extra_yaml.py  flow.py  full_help_text.sh  hash.py  health_checks.py  help.txt  help_clean.md  history.py  logger.py  options.py  org.py  plan.py  plugin.py  project.py  robot.py  runtime.py  service.py  task.py  ui.py  utils.py
cumulusci/core/: __init__.py  api_version.py  azure_devops.py  config.py  datasets.py  debug.py  enums.py  exceptions.py  flowrunner.py  flows.py  github.py  keychain.py  logger.py  merge.py  metrics.py  org_history.py  processors.py  resolution.py  runtime.py  sfdx.py  source_action.py  tasks.py  template_utils.py  utils.py  versions.py
cumulusci/files/: admin_profile.xml  package.xml
cumulusci/new_tasks/: fixtures.py  install_package.py  new_tasks.py  registry.py  wasm.py
cumulusci/newcli/: cli.py  logger.py
cumulusci/oauth/: client.py  client_info.py  exceptions.py  salesforce.py
cumulusci/plugins/: __init__.py  append_where_clause.py  plugin_base.py  plugin_loader.py
cumulusci/tasks/: 2gp.py  (+33 more)
datasets/: bad_sample.sql  external_id_sample.sql  generated_mapping.yml  include_row_errors.yml  mapping.yml  recipe.yml  sample.sql  test.extract.yml  test_minimal.extract.yml  update.recipe.yml  update_spanning.recipe.yml  upsert_example_2.sql  upsert_mapping.yml
diagram/: process_overview.html  process_overview.json
docs/: 2gp-testing.md  2gp_testing.md  2gp_testing.rst  README.md  about.md  about.rst  api_reference.rst  bulk_data.rst  cci_yml_reference.rst  cheat_sheet.md  cheat_sheet.rst  cli.md  cli.rst  command_reference.rst  commands.md  commands.rst  concepts.md  concepts.rst  conf.py  config.md  config.rst  connected-orgs.md  connected_orgs.md  connected_orgs.rst  continuous-integration.md  continuous_integration.md  continuous_integration.rst  contributing.md  contributing.rst  cookbook.md  cookbook.rst  cumulus_ci_workflow.xml  cumulusci-flow.md  cumulusci_flow.md  cumulusci_flow.rst  customize.rst  data.md  data.rst  demos.rst  dependencies.rst  (+91 more)
examples/cci-slack-plugin/: README.md  pyproject.toml
examples/cci-slack-plugin/cci_slack/: __init__.py  tasks.py
examples/cci-slack-plugin/tests/: __init__.py  test_plugin.py  test_tasks.py
integration_tests/: README.rst  conftest.py  pytest.ini  test_describe.py  test_integration_test.py
mypy/: fastnumbers.pyi
newcli/: cumulusci.py
oauth/: salesforce.py
orgs/: beta.json  dev.json  feature.json  omni.json  person_accounts.json  prerelease.json  release.json
paulignore/: generate_expansive_dataset_mapping.py
python/: package_builder_build.py
requirements/: dev.in  dev.txt  prod.in  prod.txt
rust-tasks/: Cargo.toml
salesforce_api/: metadata.py  soap_envelopes.py
scripts/: has_open_pr.py  mpinstaller_update_dependencies.py  package_upload.py  package_upload.sh  run_workflow.py  sync-main-to-dev.sh
tasks/: ant.py  salesforce.py
template/: build.properties  build.xml  codeship.sh  cumulusci.properties  version.properties
test_project/: cumulusci.yml
tests/: README.rst
tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
unpackaged/: README.md  config.json
utility/: add_to_pyright_checklist.py  animation.sh  build-homebrew.sh  ensure_dir_in_path.py  generate-release-notes.py  install.bat  install.sh  install_from_net.sh  orgpool_test_harness.py  pin_dependencies.py  push-homebrew.py  record-animation.sh  update-history.py  venv_from_pip.py
(+1526 files in other folders)
