[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cumulusci"
dynamic = ["readme", "version"]
description = "Build and release tools for Salesforce developers"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.11"
authors = [
    { name = "Salesforce.org", email = "sfdo-mrbelvedere@salesforce.com" },
]
keywords = ["cumulusci", "salesforce"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.2.0",
    "cryptography",
    "python-dateutil",
    "Faker",
    "fs",
    "github3.py",
    "jinja2",
    "keyring<=23.0.1",
    "defusedxml",
    "lxml",
    "MarkupSafe",
    "packaging>=23.0",
    "psutil",
    "pydantic>=2.0,<3",
    "PyJWT",
    "pytz",
    "pyyaml",
    "requests",
    "requests-futures",
    "rich>=13.9.4",
    "robotframework",
    "SQLAlchemy<2",
    "robotframework-pabot",
    "robotframework-requests",
    "robotframework-seleniumlibrary<6",
    "rst2ansi>=0.1.5",
    "salesforce-bulk",
    "sarge",
    "selenium<4",
    "simple-salesforce==1.11.4",
    "snowfakery>=4.1.0",
    "xmltodict",
    "docutils<=0.21.2",
]

[dependency-groups]
docs = [
    "myst-parser>=1.0.0",
    "sphinx>=5.3.0",
]
dev = [
    "coverage[toml]>=7.6.1",
    "factory-boy>=3.3.1",
    "furo>=2023.3.27",
    "jsonschema>=4.23.0",
    "pytest>=7.0.1",
    "pytest-cov>=5.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-vcr>=1.0.2",
    "responses>=0.23.1",
    "testfixtures>=8.3.0",
    "tox>=4.20.0",
    "typeguard<=2.13.3",          # TODO: Lots of changes required for v4
    "vcrpy>=6.0.2",
]
lint = [
    "black>=24.8.0",
    "flake8<4",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
select = [
    "annoy",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.scripts]
cci = "cumulusci.cli.cci:main"
snowfakery = "snowfakery.cli:main"

[project.urls]
Homepage = "https://github.com/SFDO-Tooling/CumulusCI"
Changelog = "https://cumulusci.readthedocs.io/en/stable/history.html"
"Bug Tracker" = "https://github.com/SFDO-Tooling/CumulusCI/issues"

[tool.hatch.version]
path = "cumulusci/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "/cumulusci",
    '/cumulusci/**/*.*', # y[a]ml, js[on], etc.

]

[tool.hatch.build.targets.sdist]
include = [
    "/cumulusci",
    "/requirements/*", # Needed by tox
    "README.md",       # needed by hatch-fancy-pypi-readme
    "docs/history.md",
    # ditto
]

[tool.hatch.build.targets.wheel]
exclude = ["*.sql", "*.zip"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "docs/history.md"
start-after = "<!-- latest-start -->\n\n"
end-before = "\n\n<!-- latest-stop -->"

#######################
# Tool configurations #
#######################
[tool.black]
exclude = '^/(\.|dist|pybuild|venv)'

[tool.coverage.run]
omit = ["*/tests/*", "cumulusci/files/*"]
source = ["cumulusci"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "@abc.abstract"]

[tool.pytest.ini_options]
testpaths = "cumulusci"
addopts = "-p cumulusci.tests.pytest_plugins.pytest_typeguard -p cumulusci.tests.pytest_plugins.pytest_sf_vcr -p cumulusci.tests.pytest_plugins.pytest_sf_orgconnect"
markers = [ # note that some are also defined in code. Search for addinivalue_line
    "metadeploy: mark a test that interacts with the MetaDeploy REST API",
    "use_real_env: use real environment variables to get access to e.g. environment-defined services for integration tests",
]
filterwarnings = [
    "error:ClassMovedWarning",
    "ignore::DeprecationWarning:.*.rflint",
    "ignore::DeprecationWarning:.*.selenium",
    "ignore::SyntaxWarning:.*.selenium",
]

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = "cumulusci/**/__init__.py"
known_first_party = "cumulusci"
known_third_party = "robot"

[tool.pyright]
reportMissingImports = "none"
typeCheckingMode = "basic"
exclude = ["**/test_*", "**/tests/**"]
# Add files to this list as you make them compatible.
include = [
    'cumulusci/__init__.py',
    'cumulusci/__main__.py',
    'cumulusci/cli/__init__.py',
    'cumulusci/core/__init__.py',
    'cumulusci/core/config/BaseConfig.py',
    'cumulusci/core/config/BaseTaskFlowConfig.py',
    'cumulusci/core/config/OrgConfig.py',
    'cumulusci/core/config/ScratchOrgConfig.py',
    'cumulusci/core/config/__init__.py',
    'cumulusci/core/config/base_config.py',
    'cumulusci/core/config/base_task_flow_config.py',
    'cumulusci/core/config/oauth2_service_config.py',
    'cumulusci/core/debug.py',
    'cumulusci/core/dependencies/__init__.py',
    'cumulusci/core/dependencies/utils.py',
    'cumulusci/core/exceptions.py',
    'cumulusci/core/keychain/environment_project_keychain.py',
    'cumulusci/core/keychain/subprocess_keychain.py',
    'cumulusci/core/metadeploy/__init__.py',
    'cumulusci/core/metadeploy/api.py',
    'cumulusci/core/runtime.py',
    'cumulusci/core/source/__init__.py',
    'cumulusci/core/source/local_folder.py',
    'cumulusci/core/source_transforms/__init__.py',
    'cumulusci/core/template_utils.py',
    'cumulusci/oauth/__init__.py',
    'cumulusci/oauth/exceptions.py',
    'cumulusci/robotframework/__init__.py',
    'cumulusci/robotframework/locator_manager.py',
    'cumulusci/robotframework/pageobjects/PageObjectLibrary.py',
    'cumulusci/robotframework/pageobjects/__init__.py',
    'cumulusci/salesforce_api/__init__.py',
    'cumulusci/salesforce_api/exceptions.py',
    'cumulusci/salesforce_api/filterable_objects.py',
    'cumulusci/salesforce_api/mc_soap_envelopes.py',
    'cumulusci/salesforce_api/package_install.py',
    'cumulusci/salesforce_api/soap_envelopes.py',
    'cumulusci/tasks/__init__.py',
    'cumulusci/tasks/apex/__init__.py',
    'cumulusci/tasks/bulkdata/__init__.py',
    'cumulusci/tasks/bulkdata/dates.py',
    'cumulusci/tasks/bulkdata/extract_dataset_utils/calculate_dependencies.py',
    'cumulusci/tasks/bulkdata/generate.py',
    'cumulusci/tasks/bulkdata/generate_and_load_data_from_yaml.py',
    'cumulusci/tasks/bulkdata/generate_mapping_utils/extract_mapping_file_generator.py',
    'cumulusci/tasks/bulkdata/generate_mapping_utils/generate_mapping_from_declarations.py',
    'cumulusci/tasks/bulkdata/generate_mapping_utils/mapping_generator_post_processes.py',
    'cumulusci/tasks/bulkdata/snowfakery_utils/subtask_configurator.py',
    'cumulusci/tasks/dx_convert_from.py',
    'cumulusci/tasks/github/__init__.py',
    'cumulusci/tasks/github/commit_status.py',
    'cumulusci/tasks/github/util.py',
    'cumulusci/tasks/marketing_cloud/__init__.py',
    'cumulusci/tasks/marketing_cloud/api.py',
    'cumulusci/tasks/marketing_cloud/get_user_info.py',
    'cumulusci/tasks/marketing_cloud/mc_constants.py',
    'cumulusci/tasks/metadata/__init__.py',
    'cumulusci/tasks/metadata/ee_src.py',
    'cumulusci/tasks/metadata_etl/__init__.py',
    'cumulusci/tasks/metadata_etl/objects.py',
    'cumulusci/tasks/metadata_etl/permissions.py',
    'cumulusci/tasks/metadata_etl/remote_site_settings.py',
    'cumulusci/tasks/metadata_etl/value_sets.py',
    'cumulusci/tasks/preflight/__init__.py',
    'cumulusci/tasks/push/__init__.py',
    'cumulusci/tasks/release_notes/__init__.py',
    'cumulusci/tasks/release_notes/exceptions.py',
    'cumulusci/tasks/release_notes/parser.py',
    'cumulusci/tasks/robotframework/__init__.py',
    'cumulusci/tasks/robotframework/debugger/__init__.py',
    'cumulusci/tasks/robotframework/debugger/model.py',
    'cumulusci/tasks/salesforce/BaseRetrieveMetadata.py',
    'cumulusci/tasks/salesforce/BaseSalesforceTask.py',
    'cumulusci/tasks/salesforce/GetInstalledPackages.py',
    'cumulusci/tasks/salesforce/SOQLQuery.py',
    'cumulusci/tasks/salesforce/UpdateAdminProfile.py',
    'cumulusci/tasks/salesforce/__init__.py',
    'cumulusci/tasks/salesforce/custom_settings.py',
    'cumulusci/tasks/salesforce/license_preflights.py',
    'cumulusci/tasks/vlocity/exceptions.py',
    'cumulusci/utils/classutils.py',
    'cumulusci/utils/collections.py',
    'cumulusci/utils/deprecation.py',
    'cumulusci/utils/http/requests_utils.py',
    'cumulusci/utils/iterators.py',
    'cumulusci/utils/parallel/task_worker_queues/parallel_worker.py',
    'cumulusci/utils/salesforce/count_sobjects.py',
    'cumulusci/tests/util.py',
    'cumulusci/utils/waiting.py',
    'cumulusci/utils/xml/robot_xml.py',
    'cumulusci/utils/ziputils.py',
]
# Do not add to this list. Instead use
# # pyright: strict
strict = [
    'cumulusci/cli/__init__.py',
    'cumulusci/core/__init__.py',
    'cumulusci/core/debug.py',
    'cumulusci/core/dependencies/__init__.py',
    'cumulusci/core/keychain/environment_project_keychain.py',
    'cumulusci/core/keychain/serialization.py',
    'cumulusci/core/metadeploy/__init__.py',
    'cumulusci/core/source/__init__.py',
    'cumulusci/core/source_transforms/__init__.py',
    'cumulusci/oauth/__init__.py',
    'cumulusci/oauth/exceptions.py',
    'cumulusci/robotframework/locators_*.py',
    'cumulusci/salesforce_api/__init__.py',
    'cumulusci/salesforce_api/filterable_objects.py',
    'cumulusci/salesforce_api/mc_soap_envelopes.py',
    'cumulusci/salesforce_api/soap_envelopes.py',
    'cumulusci/tasks/__init__.py',
    'cumulusci/tasks/apex/__init__.py',
    'cumulusci/tasks/bulkdata/__init__.py',
    'cumulusci/tasks/bulkdata/generate.py',
    'cumulusci/tasks/github/__init__.py',
    'cumulusci/tasks/marketing_cloud/__init__.py',
    'cumulusci/tasks/marketing_cloud/mc_constants.py',
    'cumulusci/tasks/metadata/__init__.py',
    'cumulusci/tasks/metadata_etl/__init__.py',
    'cumulusci/tasks/preflight/__init__.py',
    'cumulusci/tasks/push/__init__.py',
    'cumulusci/tasks/release_notes/__init__.py',
    'cumulusci/tasks/release_notes/exceptions.py',
    'cumulusci/tasks/salesforce/BaseSalesforceTask.py',
    'cumulusci/tasks/vlocity/exceptions.py',
    'cumulusci/utils/soql.py',
]
