[metadata]
name = cumulusci
version = attr: cumulusci.__version__
description = Build and release tools for Salesforce developers
license = BSD-3-Clause
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Salesforce.org
author_email = sfdo-mrbelvedere@salesforce.com
url = https://github.com/SFDO-Tooling/CumulusCI
project_urls =
    Documentation=http://cumulusci.readthedocs.io/
    Source=https://github.com/SFDO-Tooling/CumulusCI
    Issues=https://github.com/SFDO-Tooling/CumulusCI/issues
    Changelog=https://cumulusci.readthedocs.io/en/stable/history.html
keywords = cumulusci
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
install_requires = file: requirements/prod.txt
zip_safe = False
python_requires = >=3.8
package_dir =
    cumulusci = cumulusci

[options.entry_points]
console_scripts =
    cci = cumulusci.cli.cci:main
    snowfakery = snowfakery.cli:main

[build]
build-base = pybuild

[bdist_wheel]
universal = 1
